--- a/app/src/main/res/layout/fragment_station.xml
+++ b/app/src/main/res/layout/fragment_station.xml
@@ -10,14 +10,15 @@
         android:id="@+id/viewpagertab"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:stl_clickable="true"
-        app:stl_defaultTabBackground="?attr/selectableItemBackgroundBorderless"
+        app:stl_defaultTabBackground="?attr/actionBarItemBackground"
         app:stl_defaultTabTextAllCaps="true"
-        app:stl_defaultTabTextColor="#FFFFFF"
+        app:stl_defaultTabTextColor="@color/accent"
         app:stl_defaultTabTextHorizontalPadding="16dp"
         app:stl_defaultTabTextMinWidth="0dp"
         app:stl_defaultTabTextSize="12sp"
@@ -26,12 +27,12 @@
         app:stl_dividerThickness="0dp"
         app:stl_drawDecorationAfterTab="false"
         app:stl_indicatorAlwaysInCenter="false"
-        app:stl_indicatorColor="@color/colorPrimaryDark"
+        app:stl_indicatorColor="@color/accent"
         app:stl_indicatorCornerRadius="0dp"
-        app:stl_indicatorGravity="center"
+        app:stl_indicatorGravity="bottom"
         app:stl_indicatorInFront="false"
         app:stl_indicatorInterpolation="smart"
-        app:stl_indicatorThickness="50dp"
+        app:stl_indicatorThickness="2dp"
         app:stl_indicatorWidth="auto"
         app:stl_indicatorWithoutPadding="false"
         app:stl_overlineColor="#4D000000"
@@ -51,17 +52,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/viewpagertab" />
-
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:id="@+id/stationSpinKit"
-        style="@style/SpinKitView.Large.DoubleBounce"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"
-        app:SpinKit_Color="@color/md_amber_700"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
